TestSuite/errors/err0330.pas
begin
  var l: (A, B, C);
  print(l.A);
end.